--- a/projects/fakenews.html
+++ b/projects/fakenews.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fake News AI - Sahte Haber Tespit Modeli">
     <title>Fake News AI | Berkay Karataş</title>
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
