--- a/projects/vidmagnet.html
+++ b/projects/vidmagnet.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="VidMagnet - Cross-Platform Video İndirici">
     <title>VidMagnet | Berkay Karataş</title>
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
