--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <a href="#contact" class="mobile-link">İletişim</a>
             <div class="mobile-socials">
                 <a href="https://github.com/berkaykw" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/berkaykw" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/berkay-karata%C5%9F-747893264/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </div>
@@ -357,7 +358,8 @@
                             <i class="fab fa-github"></i>
                             <span>GitHub</span>
                         </a>
-                        <a href="https://linkedin.com/in/berkaykw" target="_blank" class="social-btn">
+                        <a href="https://www.linkedin.com/in/berkay-karata%C5%9F-747893264/" target="_blank"
+                            class="social-btn">
                             <i class="fab fa-linkedin-in"></i>
                             <span>LinkedIn</span>
                         </a>
@@ -397,7 +399,7 @@
                 </div>
                 <div class="footer-right">
                     <a href="https://github.com/berkaykw" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/berkaykw" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/berkay-karata%C5%9F-747893264/" target="_blank">LinkedIn</a>
                     <a href="mailto:berkaykw0@gmail.com">Email</a>
                 </div>
             </div>
